@@ -20,7 +20,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import javax.annotation.Nonnull;
+import jakarta.annotation.Nonnull;
 
 import org.springframework.http.MediaType;
 
@@ -29,6 +29,7 @@ import lombok.Setter;
 
 import org.frankframework.extensions.aspose.ConversionOption;
 import org.frankframework.util.XmlBuilder;
+
 /**
  * @author
  * 	Gerard van der Hoorn
@@ -57,7 +58,7 @@ public class CisConversionResult {
 	private final List<CisConversionResult> attachments = new ArrayList<>();
 
 	/**
-	 * Converted document when succeeded (otherwise <code>null</code>) -
+	 * Converted document when succeeded (otherwise <code>null</code>)
 	 */
 	@Setter @Getter private File pdfResultFile;
 
@@ -107,7 +108,7 @@ public class CisConversionResult {
 		if (filename != null) {
 			msg.append(filename);
 		}
-		msg.append(" " + PASSWORD_MESSAGE);
+		msg.append(" ").append(PASSWORD_MESSAGE);
 		return createFailureResult(conversionOption, mediaTypeReceived, filename, msg.toString(), null);
 	}
 
@@ -125,17 +126,14 @@ public class CisConversionResult {
 	}
 
 	@Override
-	public final String toString() { //HIER
-		StringBuilder builder = new StringBuilder(super.toString());
-		builder.append(String.format("ConversionOption=[%s]", getConversionOption()));
-		builder.append(String.format("mediaType=[%s]", getMediaType()));
-		builder.append(String.format("documentName=[%s]", getDocumentName()));
-		builder.append("pdfResultFile=[%s]".formatted(getPdfResultFile() == null ? "null" : getPdfResultFile().getName()));
-		builder.append(String.format("sessionKey=[%s]", getResultSessionKey()));
-		builder.append(String.format("failureReason=[%s]", getFailureReason()));
-		builder.append("attachments=[%s]".formatted(getAttachments()));
-
-		return builder.toString();
+	public final String toString() {
+		return super.toString() + String.format("ConversionOption=[%s]", getConversionOption()) +
+				String.format("mediaType=[%s]", getMediaType()) +
+				String.format("documentName=[%s]", getDocumentName()) +
+				"pdfResultFile=[%s]".formatted(getPdfResultFile() == null ? "null" : getPdfResultFile().getName()) +
+				String.format("sessionKey=[%s]", getResultSessionKey()) +
+				String.format("failureReason=[%s]", getFailureReason()) +
+				"attachments=[%s]".formatted(getAttachments());
 	}
 
 	/**
